# exchange-rate-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  exchange-rate.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  exchange-rate.rockspec  exchange-rate_sdk.lua  exchange-rate_types.lua  features.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  exchangerate_sdk.php  features.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  exchangerate_sdk.py  exchangerate_types.py  features.py  pyproject.toml
py/core/: control.py  helpers.py  operation.py  response.py  spec.py  utility_type.py
py/entity/: latest_entity.py
py/feature/: base_feature.py  cache_feature.py  clienttrack_feature.py  debug_feature.py  idempotency_feature.py  metrics_feature.py  netsim_feature.py  retry_feature.py  telemetry_feature.py  test_feature.py
py/test/: runner.py  test_exists.py  test_feature.py  test_latest_direct.py  test_latest_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  feature_hook.py  fetcher.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_result.py  make_spec.py  make_url.py  param.py  prepare_auth.py  result_body.py
rb/: AGENTS.md  CLAUDE.md  ExchangeRate_sdk.gemspec  ExchangeRate_sdk.rb  README.md  (+4 more)
(+403 files in other folders)
